WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56536
[Qt] console.log not being exposed to QmlViewer
https://bugs.webkit.org/show_bug.cgi?id=56536
Summary
[Qt] console.log not being exposed to QmlViewer
Damian Jansen
Reported
2011-03-16 22:36:01 PDT
In the QML WebView documentation (
http://doc.qt.nokia.com/main-snapshot/qml-webview.html
), for the javaScriptWindowObjects property there is the following snippet: WebView { javaScriptWindowObjects: QtObject { WebView.windowObjectName: "qml" function qmlCall() { console.log("This call is in QML!"); } } html: "<script>console.log(\"This is in WebKit!\"); window.qml.qmlCall();</script>" } According to the documentation, the output of this snippet should be: This is in WebKit! This call is in QML! Trying the example in qmlviewer.exe, with a recent git checkout of Qt gives only the second line. The first line "This is in WebKit!" is not being displayed. Relocated from
http://bugreports.qt.nokia.com/browse/QTBUG-15729
Attachments
Fix for the doc.
(1.27 KB, patch)
2011-03-18 04:47 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2011-03-17 03:51:09 PDT
That looks like bogus documentation to me. Alexis, do you know if we are exposing the inspector console to QML? Damian, is it on device or on desktop? Device build don't have the inspector...
Damian Jansen
Comment 2
2011-03-17 20:25:12 PDT
(In reply to
comment #1
)
> That looks like bogus documentation to me. Alexis, do you know if we are exposing the inspector console to QML? > > Damian, is it on device or on desktop? Device build don't have the inspector...
Reproduced on multiple platforms, including Linux desktop and Symbian devices. Though I have a feeling that this output is not something one should be able to see without some kind of javascript debugger running for the given browser.
Alexis Menard (darktears)
Comment 3
2011-03-18 04:47:00 PDT
Created
attachment 86156
[details]
Fix for the doc.
WebKit Commit Bot
Comment 4
2011-03-18 08:27:30 PDT
Comment on
attachment 86156
[details]
Fix for the doc. Clearing flags on attachment: 86156 Committed
r81471
: <
http://trac.webkit.org/changeset/81471
>
WebKit Commit Bot
Comment 5
2011-03-18 08:27:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug