2011-03-18  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Benjamin Poulain.

        [Qt] console.log not being exposed to QmlViewer
        https://bugs.webkit.org/show_bug.cgi?id=56536

        The documentation is bogus the feature does not exist.

        * declarative/qdeclarativewebview.cpp:

Canonical link: https://commits.webkit.org/71331@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81471 268f45cc-cd09-0410-ab3c-d52691b4dbfc